# claw-vector

./: .gitignore  Cargo.toml  README.md  SECURITY.md  build.rs  deny.toml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
benches/: vector_bench.rs
migrations/: 0001_collections.sql  0002_vector_records.sql  0003_indexes.sql  0004_fts.sql  0005_workspace_isolation.sql  0006_api_keys.sql
python/: .dockerignore  Dockerfile  pyproject.toml
python/claw_vector_svc/: __init__.py  auth.py  config.py  embedder.py  grpc_server.py  health.py  main.py  metrics.py  models.py
python/proto/: __init__.py
python/tests/: __init__.py  test_embedder.py  test_grpc_server.py  test_main.py  test_security_batch_ready.py
src/: collections.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs  types.rs
src/embeddings/: cache.rs  client.rs  mod.rs  types.rs
src/grpc/: mod.rs  server.rs
src/index/: flat.rs  hnsw.rs  mod.rs  selector.rs
src/proto/: vector.proto
src/search/: ann.rs  filters.rs  hybrid.rs  mod.rs  rerank.rs
src/store/: mmap.rs  mod.rs  sqlite.rs
tests/: integration.rs
