[package]
name = "claw-vector"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "The semantic memory engine for ClawDB — HNSW vector indexing and storage"
license = "MIT"

[[bin]]
name = "claw-vector-server"
path = "src/main.rs"

[lib]
name = "claw_vector"
path = "src/lib.rs"

[dependencies]
hnsw_rs = "0.3"
ndarray = { version = "0.16", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
async-trait = "0.1"
rayon = "1.10"
byteorder = "1"
memmap2 = "0.9"
tokio-stream = "0.1"
futures = "0.3"
hex = "0.4"
lru = "0.12"
sha2 = "0.10"
blake3 = "1.5"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
approx = "0.5"
criterion = { version = "0.5", features = ["async_tokio"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[[bench]]
name = "vector_bench"
harness = false
